--- a/src/views/layouts/index.handlebars
+++ b/src/views/layouts/index.handlebars
@@ -1,5 +1,5 @@
 <head>
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <link rel="stylesheet" href="/bower_components/semantic/dist/semantic.min.css">
-</head>
+    <script src="/bower_components/semantic/dist/semantic.min.js"></script>
 {{{body}}}
