--- a/src/views/partials/login-modal.handlebars
+++ b/src/views/partials/login-modal.handlebars
@@ -1,21 +1,24 @@
 <div class="ui modal">
-  <div class="ui very padded basic segment">
-    <div class="ui form">
-      <div class="field">
-        <label>Username or email</label>
-        <div class="ui left icon input">
-          <input type="text" placeholder="Username or email">
-          <i class="user icon"></i>
+  <form action="/{{role}}/login" method="post">
+    <div class="ui very padded basic segment">
+      <div class="ui form">
+        <div class="field">
+          <label>Username or email</label>
+          <div class="ui left icon input">
+            <input type="text" placeholder="Username or email" name="username" required>
+            <i class="user icon"></i>
+          </div>
         </div>
-      </div>
-      <div class="field">
-        <label>Password</label>
-        <div class="ui left icon input">
-          <input type="password">
-          <i class="lock icon"></i>
+        <div class="field">
+          <label>Password</label>
+          <div class="ui left icon input">
+            <input type="password" name="password" required>
+            <i class="lock icon"></i>
+          </div>
         </div>
+        <input type="submit" value="Login" class="ui blue submit button"/>
       </div>
-      <div class="ui blue submit button">Login</div>
     </div>
-  </div>
+  </form>
+
 </div>
