--- a/src/views/partials/feed.handlebars
+++ b/src/views/partials/feed.handlebars
@@ -1,38 +1,41 @@
 <div class="pusher">
+    <div class="ui text disabled loader" id="loader">Loading</div>
     <!-- <div class="ui basic segment"> -->
     <p class="height-same"></p>
-    <h3 class="ui header">Application Content</h3>
-    <p>Application Content</p>
-    <p>Application Content</p>
-    <p>Application Content</p>
-    <p>Application Content</p>
-    <p>Application Content</p>
-    <p>Application Content</p>
-    <p>Application Content</p>
-    <p>Application Content</p>
-    <p>Application Content</p>
-    <p>Application Content</p>
-    <p>Application Content</p>
-    <p>Application Content</p>
-    <p>Application Content</p>
-    <p>Application Content</p>
-    <p>Application Content</p>
-    <p>Application Content</p>
-    <p>Application Content</p>
-    <p>Application Content</p>
-    <p>Application Content</p>
-    <p>Application Content</p>
-    <p>Application Content</p>
-    <p>Application Content</p>
-    <p>Application Content</p>
-    <p>Application Content</p>
-    <p>Application Content</p>
-    <p>Application Content</p>
-    <p>Application Content</p>
-    <p>Application Content</p>
-    <p>Application Content</p>
-    <p>Application Content</p>
-    <p>Application Content</p>
-    <p>Application Content</p>
+    <div class="ui padded basic segment main-screen">
+        <h3 class="ui header">Application Content</h3>
+        <p>Application Content</p>
+        <p>Application Content</p>
+        <p>Application Content</p>
+        <p>Application Content</p>
+        <p>Application Content</p>
+        <p>Application Content</p>
+        <p>Application Content</p>
+        <p>Application Content</p>
+        <p>Application Content</p>
+        <p>Application Content</p>
+        <p>Application Content</p>
+        <p>Application Content</p>
+        <p>Application Content</p>
+        <p>Application Content</p>
+        <p>Application Content</p>
+        <p>Application Content</p>
+        <p>Application Content</p>
+        <p>Application Content</p>
+        <p>Application Content</p>
+        <p>Application Content</p>
+        <p>Application Content</p>
+        <p>Application Content</p>
+        <p>Application Content</p>
+        <p>Application Content</p>
+        <p>Application Content</p>
+        <p>Application Content</p>
+        <p>Application Content</p>
+        <p>Application Content</p>
+        <p>Application Content</p>
+        <p>Application Content</p>
+        <p>Application Content</p>
+        <p>Application Content</p>
+    </div>
     <!-- </div> -->
 </div>
