--- a/src/views/dashboard.handlebars
+++ b/src/views/dashboard.handlebars
@@ -8,7 +8,7 @@
     </style>
 </head>
 {{> nav-bar}}
-{{> course-side-bar}}
+{{> course-sidebar}}
 {{> feed}}
 {{!-- {{> whiteboard}} --}}
 {{> chat-bar}}
