--- a/src/views/partials/course-sidebar.handlebars
+++ b/src/views/partials/course-sidebar.handlebars
@@ -5,7 +5,7 @@
         <i class="home icon"></i>
         Home
     </a>
-    <a class="item" value="discuss">
+    <a class="item" value="discussion">
         <i class="columns icon"></i>
         Discussion
     </a>
