little bit routing and discussion room design

--- a/public/css/popup.css
+++ b/public/css/popup.css
@@ -2,6 +2,12 @@
     width: calc(100% - 300px)
 }
 
+.ui.loader {
+    top: 50vh !important;
+}
+.ui.comments .comment .avatar img, .ui.comments .comment img.avatar {
+    height: auto !important;
+}
 /* chat popup */
 
 .popup-box
