--- a/src/views/partials/single-comment.handlebars
+++ b/src/views/partials/single-comment.handlebars
@@ -14,7 +14,7 @@
             <a class="reply">Reply</a>
         </div>
     </div>
-</div>
 {{#if comments}}
-    {{> comment comments}}
+    {{> comment comments=comments}}
 {{/if}}
+</div>
