--- a/src/views/partials/course-sidebar.handlebars
+++ b/src/views/partials/course-sidebar.handlebars
@@ -1,7 +1,7 @@
 <div class="ui visible left thin vertical sidebar menu" id="course-side-bar">
     <a class="item height-same">
     </a>
-    <a class="active item" value="home">
+    <a class="active item" value="home" href="/{{role}}/profile">
         <i class="home icon"></i>
         Home
     </a>
