--- a/src/views/partials/nav-bar.handlebars
+++ b/src/views/partials/nav-bar.handlebars
@@ -11,7 +11,7 @@
                 <div class="ui button">Go</div>
             </div>
         </div>
-        <a class="ui item">
+        <a class="ui item" href="/{{role}}/profile">
             <img class="ui avatar image" src="/images/avatar/rachel.png">
         </a>
     </div>
