--- a/src/views/partials/profile-sidebar.handlebars
+++ b/src/views/partials/profile-sidebar.handlebars
@@ -1,24 +1,49 @@
 <div class="ui visible left  vertical sidebar menu">
     <a class="item height-same">
     </a>
-    <a class="item">
+    {{!-- <a class="item">
         <i class="user icon"></i>
         Profile
-    </a>
+    </a> --}}
     <a class="item" href="/{{role}}/dashboard">
         <i class="ellipsis vertical icon"></i>
         Dashboard
     </a>
+    {{#ifeq "student" role}}
+    <a class="item" onclick="navigate('/course/search')">
+        <i class="search icon"></i>
+        Search courses
+    </a>
+    <a class="item" onclick="navigate('/course/register')">
+        <i class="clipboard list icon"></i>
+        Register for course
+    </a>
+    {{/ifeq}}
     <a class="item">
+        Courses {{#ifeq role "tutor"}}
+        <button class="ui right floated primary mini button" onclick="navigate('/course/add')">
+            Add
+        </button>
+        {{else}}
         <i class="list icon"></i>
-        Courses
-        <div class="menu friends-menu">
+        {{/ifeq}}
+        <div class="menu">
             {{#each courses}}
             <a class="item" value="{{this.course_id}}">
-                <i class="child icon"></i>
                 {{this.title}}
+                <i class="arrow alternate circle right icon"></i>
             </a>
             {{/each}}
         </div>
     </a>
 </div>
+<script>
+    function navigate(path) {
+        $('#loader').removeClass('disabled').addClass('active')
+        $.get(path, function (data) {
+            console.log(data)
+            $('#loader').addClass('disabled').removeClass('active')
+            $(".main-screen").html(data);
+        });
+    }
+</script>
