--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -8,5 +8,7 @@
     </style>
 </head>
 {{> nav-bar}}
-{{> profile-sidebar}}
-
+{{> profile-sidebar courses=courses}}
+{{!-- {{#ifeq "tutor" role}} --}}
+{{> feed}}
+{{!-- {{/ifeq}} --}}
