--- a/src/views/partials/chat-bar.handlebars
+++ b/src/views/partials/chat-bar.handlebars
@@ -4,7 +4,7 @@
     <a class="item">
         <i class="user icon"></i>
         Tutors
-        <div class="menu friends-menu">
+        <div class="menu">
             <a class="item" onclick="javascript:register_popup('Enterprise', 'Enterprise')">
                 <img class="ui avatar image" src="/images/avatar/matthew.png"> Enterprise
             </a>
