--- a/src/views/partials/nav-bar.handlebars
+++ b/src/views/partials/nav-bar.handlebars
@@ -7,7 +7,7 @@
     <div class="right menu">
         <div class="item">
             <div class="ui action input">
-                <input type="text" placeholder="Navigate to...">
+                <input type="text" placeholder="Search...">
                 <div class="ui button">Go</div>
             </div>
         </div>
