--- a/src/views/partials/register-course.handlebars
+++ b/src/views/partials/register-course.handlebars
@@ -1,10 +1,10 @@
 <div class="ui basic segment" style="width: 50% !important">
-    <form action="/course/register">
+    <form action="/course/register" method="post">
         <div class="ui form">
             <div class="field">
                 <label>Course Id</label>
                 <div class="ui left input">
-                    <input type="text" placeholder="" name="username" value="{{courseId}}">
+                    <input type="text" placeholder="" name="id" value="{{courseId}}">
                 </div>
             </div>
             <div class="field">
