--- a/src/views/partials/search-course.handlebars
+++ b/src/views/partials/search-course.handlebars
@@ -5,7 +5,7 @@
             <img class="right floated mini ui image" src="{{creator.pic}}">
             <div class="header">{{title}}</div>
              <div class="meta">
-        {{creator.username}}
+        By: {{creator.username}}
               </div>
             <div class="description">
                 {{description}}
