--- a/src/views/partials/whiteboard.handlebars
+++ b/src/views/partials/whiteboard.handlebars
@@ -11,4 +11,7 @@
         Clear
     </button>
 </div>
+    <script src="/js/whiteboard.js"></script>
+{{else}}
+    <script src="/js/whiteboard-client.js"></script>
 {{/ifeq}}
