--- a/src/views/partials/profile-sidebar.handlebars
+++ b/src/views/partials/profile-sidebar.handlebars
@@ -20,7 +20,7 @@
     </a>
     {{/ifeq}}
     <a class="item">
-        Courses {{#ifeq role "tutor"}}
+        <span onclick="navigate('/course/list')">Courses</span> {{#ifeq role "tutor"}}
         <button class="ui right floated primary mini button" onclick="navigate('/course/add')">
             Add
         </button>
@@ -29,13 +29,20 @@
         {{/ifeq}}
         <div class="menu">
             {{#each courses}}
-            <a class="item" value="{{this.course_id}}">
+            <a class="item" value="{{this.courseId}}" href="/{{../role}}/dashboard/{{this.id}}">
                 {{this.title}}
                 <i class="arrow alternate circle right icon"></i>
             </a>
+            {{!-- {{/with}} --}}
             {{/each}}
         </div>
     </a>
+    {{#ifeq "tutor" role}}
+        <a class="item" onclick="navigate('/course/list')">
+        <i class="list icon"></i>
+        See passwords
+    </a>
+    {{/ifeq}}
 </div>
 <script>
     function navigate(path) {
