--- a/src/views/dashboard.handlebars
+++ b/src/views/dashboard.handlebars
@@ -1,6 +1,7 @@
     <link rel="stylesheet" href="/css/popup.css">
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/popup.js"></script>
+    <script src="http://cdn.agora.io/sdk/web/AgoraRTCSDK-2.4-latest.js"></script>
 <style>
         .height-same {
             height: 50px;
