--- a/src/views/partials/register-form.handlebars
+++ b/src/views/partials/register-form.handlebars
@@ -1,10 +1,10 @@
 <div class="column">
     <div class="oauth-box">
 
-        <button class="ui red button oauth-box-button">
+        <button class="ui red button oauth-box-button" >
             <i class="google icon"></i>
             Login with Google</button>
-        <button class="ui blue button oauth-box-button">
+        <button class="ui blue button oauth-box-button" onclick="window.location.pathname= '/auth/facebook'">
             <i class="facebook f icon"></i>
             Login with Facebook</button>
     </div>
