--- a/src/views/dashboard.handlebars
+++ b/src/views/dashboard.handlebars
@@ -2,6 +2,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/popup.js"></script>
     <script src="http://cdn.agora.io/sdk/web/AgoraRTCSDK-2.4-latest.js"></script>
+    <script src="/bower_components/bundle.js"></script>
 <style>
         .height-same {
             height: 50px;
@@ -14,3 +15,4 @@
 {{!-- {{> whiteboard}} --}}
 {{> chat-bar}}
 
+{{!-- {{log tutor}} --}}
