--- a/src/views/partials/register-form.handlebars
+++ b/src/views/partials/register-form.handlebars
@@ -8,7 +8,7 @@
             <i class="facebook f icon"></i>
             Login with Facebook</button>
     </div>
-    <form action="/{{role}}/register" method="post">
+    <form action="/{{userData.role}}/register" method="post">
     <div class="ui form">
         <div class="two fields">
             <div class="field">
