--- a/src/views/partials/login-modal.handlebars
+++ b/src/views/partials/login-modal.handlebars
@@ -1,5 +1,5 @@
 <div class="ui modal">
-  <form action="/{{role}}/login" method="post">
+  <form action="/{{userData.role}}/login" method="post">
     <div class="ui very padded basic segment">
       <div class="ui form">
         <div class="field">
