--- a/src/views/partials/nav-bar.handlebars
+++ b/src/views/partials/nav-bar.handlebars
@@ -2,17 +2,24 @@
     <div class="item">
         <img src="/images/logo.png">
     </div>
-    <a class="item">About</a>
-    <a class="item">Testimonials</a>
-    <div class="right menu">
+    {{#if course}}
+    <a class="item">
+    #{{course}}
+    </a>
+    {{/if}}
+
+    {{!-- <a class="item">About</a>
+    <a class="item">Testimonials</a> --}}
+    <div class="ui right secondary menu">
         <div class="item">
-            <div class="ui action input">
+            {{!-- <div class="ui action input">
                 <input type="text" placeholder="Search...">
                 <div class="ui button">Go</div>
-            </div>
+            </div> --}}
+        @{{userData.username}}
         </div>
-        <a class="ui item" href="/{{role}}/profile">
-            <img class="ui avatar image" src="/images/avatar/rachel.png">
+        <a class="ui item" href="/{{userData.role}}/profile">
+            <img class="ui avatar image" src="{{userData.pic}}">
         </a>
     </div>
 </div>
