--- a/src/views/partials/register-form.handlebars
+++ b/src/views/partials/register-form.handlebars
@@ -1,7 +1,7 @@
 <div class="column">
     <div class="oauth-box">
 
-        <button class="ui red button oauth-box-button" >
+        <button class="ui red button oauth-box-button" onclick="window.location.pathname= '/auth/google'">
             <i class="google icon"></i>
             Login with Google</button>
         <button class="ui blue button oauth-box-button" onclick="window.location.pathname= '/auth/facebook'">
