--- a/public/css/popup.css
+++ b/public/css/popup.css
@@ -46,10 +46,23 @@
 
 .popup-box .popup-messages
 {
-    height: 100%;
+    height: 80%;
     overflow-y: scroll;
 }
 
+.reply {
+    width: 280px;
+    height: 10%;
+}
+.reply>input{
+    border: 0;
+    height: 100%;
+    width: 80%;
+}
+.reply>button{
+    border: 0;
+    height: 100%;
+}
 
  /* whiteboard  */
 
@@ -67,5 +80,41 @@
     border: solid black 2px ;
   }
 
+/* chat message */
+
+
+  .chat__bubble {
+    margin-bottom: 3px;
+    padding: 5px 10px;
+    clear: both;
+    border-radius: 10px 10px 2px 2px ;
+  }
+
+  .chat__bubble--rcvd {
+    background: #dfdfdf;
+    color: black;
+    float: left;
+    border-bottom-right-radius: 10px;
+  }
+
+  .chat__bubble--sent {
+    background: #0066ff;
+    color: white;
+    float: right;
+    border-bottom-left-radius: 10px;
+  }
+
+  .chat__bubble--sent + .chat__bubble--sent {
+    border-top-right-radius: 2px;
+  }
+
+  .chat__bubble--rcvd + .chat__bubble--rcvd {
+    border-top-left-radius: 2px;
+  }
+
+  .chat__bubble--stop {
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+  }
 
 
