--- a/src/views/partials/register-form.handlebars
+++ b/src/views/partials/register-form.handlebars
@@ -66,5 +66,5 @@
 </div>
 
 <script>
-    document.cookie = "role={{userData.role}};"
+    document.cookie = "role={{userData.role}}; path=/"
 </script>
