--- a/src/views/partials/nav-bar.handlebars
+++ b/src/views/partials/nav-bar.handlebars
@@ -16,7 +16,7 @@
                 <input type="text" placeholder="Search...">
                 <div class="ui button">Go</div>
             </div> --}}
-        @{{userData.name}}
+        @{{userData.firstname}}
         </div>
         <a class="ui item" href="/{{userData.role}}/profile">
             <img class="ui avatar image" src="{{userData.pic}}">
