--- a/src/views/partials/feed.handlebars
+++ b/src/views/partials/feed.handlebars
@@ -3,7 +3,10 @@
     <!-- <div class="ui basic segment"> -->
     <p class="height-same"></p>
     <div class="ui padded basic segment main-screen">
-        <h3 class="ui header">Application Content</h3>
+
+     <h3 class="ui header">User Profile</h3>
+     <p>Coming Soom :)</p>
+        {{!-- <h3 class="ui header">Application Content</h3>
         <p>Application Content</p>
         <p>Application Content</p>
         <p>Application Content</p>
@@ -35,7 +38,7 @@
         <p>Application Content</p>
         <p>Application Content</p>
         <p>Application Content</p>
-        <p>Application Content</p>
+        <p>Application Content</p> --}}
     </div>
     <!-- </div> -->
 </div>
