--- a/src/views/partials/course-sidebar.handlebars
+++ b/src/views/partials/course-sidebar.handlebars
@@ -17,10 +17,10 @@
         <i class="edit outline icon"></i>
         WhiteBoard
     </a>
-    <a class="item" value="chat">
+    {{!-- <a class="item" value="chat">
         <i class="newspaper icon"></i>
         Chat
-    </a>
+    </a> --}}
 </div>
 <script>
     $('#course-side-bar > a').click(function(){
