--- a/src/views/partials/feed.handlebars
+++ b/src/views/partials/feed.handlebars
@@ -3,9 +3,12 @@
     <!-- <div class="ui basic segment"> -->
     <p class="height-same"></p>
     <div class="ui padded basic segment main-screen">
-
+{{#if profile}}
      <h3 class="ui header">User Profile</h3>
      <p>Coming Soom :)</p>
+    {{else}}
+    {{> whiteboard}}
+{{/if}}
         {{!-- <h3 class="ui header">Application Content</h3>
         <p>Application Content</p>
         <p>Application Content</p>
