post and connectchat fixes

--- a/src/views/partials/comment-box.handlebars
+++ b/src/views/partials/comment-box.handlebars
@@ -1,7 +1,7 @@
 <div class="ui comments">
-  <h3 class="ui dividing header">Comments</h3>
+  <h4 class="ui dividing header">Comments</h4>
 
  {{#each comments}} {{> single-comment this}} {{/each}}
 
-{{> reply}}
+{{!-- {{> reply}} --}}
 </div>
