--- a/src/views/partials/whiteboard.handlebars
+++ b/src/views/partials/whiteboard.handlebars
@@ -39,9 +39,12 @@
             </button>
         </div>
 </div>
-{{#ifeq "tutor" userData.role}}
+
+{{!-- {{#ifeq "tutor" userData.role}}
 <script src="/js/whiteboard.js"></script> {{else}}
-<script src="/js/whiteboard-client.js"></script> {{/ifeq}}
+<script src="/js/whiteboard-client.js"></script> {{/ifeq}} --}}
+
+<script src="/js/whiteboard.js"></script>
 
 <div class="other-views">
 </div>
