--- a/src/views/dashboard.handlebars
+++ b/src/views/dashboard.handlebars
@@ -1,18 +1,15 @@
-    <link rel="stylesheet" href="/css/popup.css">
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/popup.js"></script>
-    <script src="https://cdn.agora.io/sdk/web/AgoraRTCSDK-2.4-latest.js"></script>
-    <script src="/bower_components/bundle.js"></script>
-<style>
-        .height-same {
-            height: 50px;
-        }
-    </style>
-</head>
-{{> nav-bar}}
-{{> course-sidebar}}
-{{> feed}}
-{{!-- {{> whiteboard}} --}}
-{{> chat-bar}}
+<link rel="stylesheet" href="/css/popup.css">
+<script src="/socket.io/socket.io.js"></script>
+<script src="/js/popup.js"></script>
+<script src="https://cdn.agora.io/sdk/web/AgoraRTCSDK-2.4-latest.js"></script>
+<script src="/bower_components/bundle.js"></script>
+<script src="/bower_components/bundle.js"></script>
+<script src="/js/chat.js"></script>
 
-{{!-- {{log tutor}} --}}
+<style>
+    .height-same {
+        height: 50px;
+    }
+</style>
+</head>
+{{> nav-bar}} {{> course-sidebar}} {{> feed}} {{!-- {{> whiteboard}} --}} {{> chat-bar}} {{!-- {{log tutor}} --}}
